Updated NC to latest version